# gli

./: .gitignore  .gli.yml.example  README.md  gli.cabal  stack.yaml
app/: Main.hs
src/gli/: cli.hs  gitlab.hs  setup.hs  types.hs
