name:                gli
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/goromlagche/gli#readme
license:             BSD3
license-file:        LICENSE
author:              goromlagche
maintainer:          mrinmoy.das91@gmail.com
copyright:           2016 Mrinmoy Das
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Gli.Types
                     , Gli.Gitlab
                     , Gli.Cli
  build-depends:       base >= 4.7 && < 5
                     , http-client
                     , http-conduit
                     , http-client-tls
                     , text
                     , aeson
                     , bytestring
                     , optparse-applicative
  default-language:    Haskell2010

executable gli
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , gli
                     , yaml
  default-language:    Haskell2010

test-suite gli-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , gli
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/goromlagche/gli
